# smapsr

./: .gitignore  README.md  devenv.nix  devenv.yaml  pyproject.toml
env/: flake.nix
smapsr/: evals.py  io.py  losses.py  models.py  train.py
